Remove blur when scramble game is solved to show blurred person.

--- a/war/css/main.css
+++ b/war/css/main.css
@@ -262,6 +262,12 @@ html,body {
 
 .main-scramble #blurred-image {
 	margin-top: 30px;
+	
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
 }
 
 .main-scramble #scramble-name {
